--- a/style.css
+++ b/style.css
@@ -574,9 +574,9 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #079097;
+  border-left: 2vmin solid  #db1561;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
-  -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
+  -webkit-mask-image: linear-gradient(to top, transparent 30%,  #db1561 60%);
 }
 
 .flower__g-right--1 {
@@ -644,7 +644,7 @@ body {
 .flower__g-front__line {
   width: 0.3vmin;
   height: 20vmin;
-  background-image: linear-gradient(to top, transparent, #079097, transparent 100%);
+  background-image: linear-gradient(to top, transparent,  #db1561, transparent 100%);
   position: relative;
 }
 
@@ -776,8 +776,8 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #079097;
-  -webkit-mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
+  border-left: 2vmin solid  #db1561;
+  -webkit-mask-image: linear-gradient(to top, transparent 25%,  #db1561 50%);
   position: relative;
   z-index: 1;
 }
@@ -897,7 +897,7 @@ body {
 }
 
 .long-g--1 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%,  #db1561 80%) !important;
 }
 
 .long-g--1 .leaf--1 {
@@ -917,7 +917,7 @@ body {
 
 .long-g--2 .leaf,
 .long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #079097 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%,  #db1561 80%) !important;
 }
 
 .long-g--2 .leaf--1,
@@ -932,7 +932,7 @@ body {
 }
 
 .long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%,  #db1561 80%) !important;
 }
 
 .long-g--4 {
@@ -943,7 +943,7 @@ body {
 }
 
 .long-g--4 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #079097 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #db1561 80%) !important;
 }
 
 .long-g--5 {
