--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #6bf0ff;
+  background-color: #db1561;
   filter: blur(10vmin);
 }
 
@@ -166,8 +166,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #a7ffee;
-  background-image: linear-gradient(to top, #54b8aa, #a7ffee);
+  background-color: #db1561;
+  background-image: linear-gradient(to top, #54b8aa, #db1561);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -191,7 +191,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #39c6d6, #a7ffee);
+  background-image: linear-gradient(to top, #39c6d6, #db1561);
   z-index: 1;
   opacity: 0.8;
 }
@@ -221,7 +221,7 @@ body {
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #14757a, #39c6d6);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #14757a, #db1561);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   animation: grow-flower-tree 4s backwards;
 }
@@ -236,7 +236,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #39c6d6);
+  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #db1561);
 }
 
 .flower__line__leaf--1 {
@@ -289,7 +289,7 @@ body {
 }
 
 .flower__light:nth-child(odd) {
-  background-color: #23f0ff;
+  background-color: #db1561;
 }
 
 .flower__light--1 {
@@ -333,7 +333,7 @@ body {
 }
 
 .flower__grass {
-  --c: #159faa;
+  --c: #db1561;
   --line-w: 1.5vmin;
   position: absolute;
   bottom: 12vmin;
@@ -520,7 +520,7 @@ body {
 .flower__g-long {
   --w: 2vmin;
   --h: 6vmin;
-  --c: #159faa;
+  --c: #db1561;
   position: absolute;
   bottom: 10vmin;
   left: -3vmin;
@@ -746,9 +746,9 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin rgba(44, 238, 252, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
-  mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #db1561 50%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(to bottom right, #db1561 50%, transparent 50%, transparent);
+  mask-image: linear-gradient(to bottom right, #db1561 50%, transparent 50%, transparent);
 }
 
 .flower__g-fr {
@@ -790,8 +790,8 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin rgba(44, 238, 252, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(135deg, #159faa 40%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #db1561 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #db1561 40%, transparent 50%, transparent);
 }
 
 .flower__g-fr__leaf--1 {
@@ -1193,9 +1193,8 @@ body {
 
 .birthday-text {
   position: Absolute;
-  top: 80%;
-  right:20%;
-  left: 30%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   font-size: 25px;
   font-style: italic;
