--- a/style.css
+++ b/style.css
@@ -1192,15 +1192,17 @@ body {
 }
 
 .birthday-text {
-  position: Absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 25px;
-  font-style: italic;
-  color: rgb(144, 227, 248);
-  text-align: center;
-  animation: birthdayAnimation 5s linear infinite;
+    position: Absolute;
+    top: 10%;
+    right:20%;
+    left: 30%;
+    padding:5%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+    font-style: italic;
+    color: pink;
+    text-align: center;
+    animation: birthdayAnimation 8s linear infinite;
 }
 
 @keyframes birthdayAnimation {
